--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,147 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Noto Sans", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing {
+  position: relative;
+  background: url("https://cdn.pixabay.com/photo/2017/08/05/22/53/book-2586367_960_720.jpg")
+    no-repeat center center/cover;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dark-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.landing-inner {
+  color: #fff;
+  height: 100%;
+  width: 80%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.x-large {
+  font-family: "Grandstander", cursive;
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.lead {
+  font-size: 1.5rem;
+  margin: 1rem 5rem;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 70%;
+  background-color: rgba(255, 255, 255, 0.315);
+  border-radius: 5%;
+  padding: 3rem;
+}
+
+.login-form h1 {
+  margin: 2rem auto;
+  text-shadow: 2px 2px 4px #302f2f;
+}
+
+.login-form .buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.landing-inner .form-group {
+  display: flex;
+  flex-direction: row;
+}
+
+.form-group i {
+  margin: auto auto;
+  padding: 1rem;
+}
+
+@media (max-width: 992px) {
+  .dark-overlay {
+    display: flex;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .inner-top {
+    height: 20%;
   }
+
+  .x-large {
+    margin-top: 20%;
+  }
+
+  .lead {
+    display: none;
+  }
+
+  .login-form {
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0;
+  }
+
+  .login-form h1 {
+    display: none;
+  }
+
+  .btn-outline-success {
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 620px) {
+  .x-large i {
+    display: none;
+  }
+
+  .x-large {
+    margin-bottom: 0;
+  }
+
+  .inner-top {
+    height: 40%;
+    padding-bottom: 0;
+  }
+
+  .login-form {
+    padding: 0;
+  }
+}
+
+.container {
+  margin-top: 10%;
+}
+
+.container form {
+  background-color: rgba(226, 222, 222, 0.829);
+}
+
+.card-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
